--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 env_list = py{37,38,39,310,311,312} #, python2.7 # Hatchling (pyproject.toml) warns Python 3.5 is deprecated.
 minversion = 4.4.11
 
-[testenv]
+[testenv:py3]
 description = run the tests with pytest
 deps =
     pytest>=4.6
@@ -12,7 +12,5 @@ commands =
 
 
 [testenv:python2.7]
-description = run the tests with pytest
-deps =
-    pytest<=4.6
-commands = pytest {tty:--color=yes} {posargs}
+description = run the tests with unittest  # install_command = 
+commands = python2 -m unittest
