Refactor to setup.py form and test

--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,40 @@
 [tox]
-env_list = py{37,38,39,310,311,312} #, python2.7 # Hatchling (pyproject.toml) warns Python 3.5 is deprecated.
+env_list = py{312}, python2.7 #py{37,38,39,310,311,312} #, python2.7 # Hatchling (pyproject.toml) warns Python 3.5 is deprecated.
 minversion = 4.4.11
 
-[testenv:py3]
+[testenv:py312]
 description = run the tests with pytest
-deps =
-    pytest>=4.6
-commands =
-    pytest {tty:--color=yes} {posargs}
+deps = pytest>=4.6
+commands = pytest {tty:--color=yes} {posargs}
 
 
 
 [testenv:python2.7]
 description = run the tests with unittest  # install_command = 
 commands = python2 -m unittest
+
+
+[testenv:py311]
+description = run the tests with pytest
+deps = pytest>=4.6
+commands = pytest {tty:--color=yes} {posargs}
+
+[testenv:py310]
+description = run the tests with pytest
+deps = pytest>=4.6
+commands = pytest {tty:--color=yes} {posargs}
+
+[testenv:py39]
+description = run the tests with pytest
+deps = pytest>=4.6
+commands = pytest {tty:--color=yes} {posargs}
+
+[testenv:py38]
+description = run the tests with pytest
+deps = pytest>=4.6
+commands = pytest {tty:--color=yes} {posargs}
+
+[testenv:py37]
+description = run the tests with pytest
+deps = pytest>=4.6
+commands = pytest {tty:--color=yes} {posargs}
