Added Mark Ransom's function for decoding high unicode escapes on Python 2
https://stackoverflow.com/a/28326717/20785734

--- a/benchmark/data.toml
+++ b/benchmark/data.toml
@@ -120,9 +120,10 @@ Liirum laarum liirum laarum.
 Liirum laarum liirum laarum.
 Liirum laarum liirum laarum.
 '''
-basic-str = """\
+basic-str = """\   
        Escape whitespace. \
 
 
        Liirum laarum liirum laarum.\ueeee\U000eeeee\u1234
 """
+# "undefined character name '\U000eeeee'"
