--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,24 @@
 [tox]
-env_list = py{312}, python2.7 #py{37,38,39,310,311,312} #, python2.7 # Hatchling (pyproject.toml) warns Python 3.5 is deprecated.
+env_list = py{27, 312} #py{37,38,39,310,311,312} #, python2.7 # Hatchling (pyproject.toml) warns Python 3.5 is deprecated.
+skip_missing_interpreters = True
 minversion = 4.4.11
+
+[testenv]
+basepython=
+    py3: C:\Program Files\Python312\python.exe
+    py2: C:\Python27\python.exe
 
 [testenv:py312]
 description = run the tests with pytest
-deps = pytest>=4.6
+deps = pytest
 commands = pytest {tty:--color=yes} {posargs}
 
 
 
-[testenv:python2.7]
+[testenv:27]
 description = run the tests with unittest  # install_command = 
-commands = python2 -m unittest
+deps = pytest<=4.6
+commands = python -m unittest discover
 
 
 [testenv:py311]
