Passes 52 Iron Python tests! (test in global env with ironpython-pytest)
Still passing 52 in Py2.7 (manual venv) and 312 & 2 xfails in Py3.7 - 3.12 (via tox)

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,7 @@
 [tox]
-env_list = py{27, 312} #py{37,38,39,310,311,312} #, python2.7 # Hatchling (pyproject.toml) warns Python 3.5 is deprecated.
-skip_missing_interpreters = True
+env_list = py{37,38,39,310,311,312} #, python2.7 # Hatchling (pyproject.toml) warns Python 3.5 is deprecated.
 minversion = 4.4.11
-
-[testenv]
-basepython=
-    py3: C:\Program Files\Python312\python.exe
-    py2: C:\Python27\python.exe
+ignore_basepython_conflict = true
 
 [testenv:py312]
 description = run the tests with pytest
@@ -15,9 +10,14 @@ commands = pytest {tty:--color=yes} {posargs}
 
 
 
-[testenv:27]
+[testenv:iron27]
 description = run the tests with unittest  # install_command = 
-deps = pytest<=4.6
+basepython = C:\Program Files\IronPython 2.7\ipy.exe
+commands = python -m unittest discover
+
+[testenv:py27]
+description = run the tests with unittest  # install_command = 
+basepython = C:\Python27\python.exe
 commands = python -m unittest discover
 
 
