dicts -> Ordered Dicts before Python 3.7 or in iron python

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,21 @@
 [tox]
-env_list = py{37,38,39,310,311,312} #, python2.7 # Hatchling (pyproject.toml) warns Python 3.5 is deprecated.
+env_list = py{37,38,39,310,311,312} # Hatchling (pyproject.toml) 
+                                    # warns Python 3.5 is deprecated, 
+                                    # and something doesn't like 
+                                    # Python 3.6 either.
+
+# Python 3 only.  This version of tox / virtualenv under 
+# Python 3.12 on Windows, when asked to set up a testenv
+# for python2.7 just uses Python 3.12 (no indication of
+# this is provided ot the user)
+#
+# Fortunately there are no deps, and little use is made of
+# env variables in testing, so python 2 and iron python can 
+# just be tested in a global installation if needs be.  
+#
+# A work around for this using invoke to run the tests instead
+# of tox is in the pipeline.
+
 minversion = 4.4.11
 ignore_basepython_conflict = true
 
